1.18.1
---
- Do not close buffer twice with mpg123 -R (delete outdated code in control_generic(), fixing bug 207.

1.18.0
---

- libmpg123 version 39
- Big version increase for clear distinction regarding the 1.14.x regression fixes in libmpg123.
- Regression fix: Ensure decoder reinitialization on combination of seek and resync (buffer overflow bug 201, introduced in 1.14.1).
- Regression fix: Make parsing really end on reaching of junk limit (introduced in 1.14.4).
- Add check for bad bit allocation value in layer I decoder (removes audible glitch in bug 201 test file).
- Avoid wrong error message about Frankenstein streams when gapless decoding disabled.
- Be verbose about big header changes (Frankenstein streams). Note that changes in samples per frame will confuse the seeking code, but decoding can get through.
- Actually use the full routine to close tracks. Avoids socket leak when playing multiple HTTP streams from a playlist (bug 203).
- Send correct host header when connecting through HTTP proxy (bug 202, figured out by Rajeev V. Pillai).
- The console application now informs about changed major stream properties (prints out another header line).

1.17.0
---
- mpg123-id3dump --no-scan; for speedup
- hide -C parameter from mpg123 --help when it is not supported
- added tinyalsa Output (by Jarno Lehtinen)
- build system tweaking
- some care for fixing Cygwin builds

1.16.0
---
- Taihei strikes again:
  - New Huffman decoding scheme (configurable, on by default) brings nice boost to mpg123 to make it the fastest decoder on modern CPUs again.
  - new AVX decoder
  - assembly-optimized DCT36 for SSE and AVX
- added configs for vintage 3DNow(ext) CPUs (AMD K6) utilizing assembly DCT36
- added configs for vintage SSE CPUs (Pentium M), utilizing C DCT36
- added FORMAT command to generic control
- added support for ID3v2 APIC frames
- added mpg123-id3dump as official companion to extract meta data
  (including writing of album art from APIC to files)